# lenscalc

./: .gitignore  LICENSE  README.md  lenscalc.py  pyproject.toml  requirements-dev.txt  requirements-extra.txt  test_basic_calculations.py  test_lenscalc.py  test_special_calculations.py  test_variable_combinations.py
lenscalc-web/: app.py
lenscalc_web/: app.py
lenscalc_web/static/: style.css
lenscalc_web/templates/: index.html  result.html
tests/: combinations_for_tests.py  test_basic_calculations.py  test_extra.py  test_special_calculations.py  test_variable_combinations.py
